--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <ui-view></ui-view>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js'></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.4.0/lang/ar-ma.min.js"></script> -->
 
 
     <!--<script src="./js/app.js"></script>
