--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS -->
-    <!-- <link rel="stylesheet" href="./styles/routes/login.css" media="screen" title="no title"> -->
     <link rel="stylesheet" href="./bundle.min.css" media="screen" title="no title">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" type="text/css" href="dist/sweetalert.css">
 
     <title>Order Hound2</title>
 
@@ -18,27 +18,7 @@
     <ui-view></ui-view>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js'></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.4.0/lang/ar-ma.min.js"></script> -->
-
-
-    <!--<script src="./js/app.js"></script>
-    <script src="./js/login/login.js"></script>
-
-    <script src="./js/adminHome/adminHomeCtrl.js"></script>
-
-    <script src="./js/home/homeCtrl.js"></script>
-    <script src="./js/home/homeService.js"></script>
-
-    <script src="./js/manage/manageUserCtrl.js"></script>
-
-    <script src="./js/main/mainService.js"></script>
-
-    <script src="./js/directives/search/searchCtrl.js"></script>
-    <script src="./js/directives/search/searchService.js"></script>
-
-    <script src="./js/directives/search/searchDirective.js"></script> -->
-
-    <!-- <script src="./bundle.min.js"></script> -->
+    <script src="dist/sweetalert.min.js"></script>
     <script src="./bundle.min.js"></script>
 
   </body>
